@@ -77,6 +77,7 @@ test/lib/cpp/*.test
 
 test/unit/bridge_topic_test
 test/unit/coverage.info
+test/unit/keepalive_test
 test/unit/mosq_test
 test/unit/persist_read_test
 test/unit/persist_write_test
