@@ -246,6 +246,8 @@ int mosquitto_main_loop(struct mosquitto__listener_sock *listensock, int listens
 			mosquitto_security_apply();
 			log__close(db.config);
 			log__init(db.config);
+			keepalive__cleanup();
+			keepalive__init();
 #ifdef WITH_CJSON
 			broker_control__reload();
 #endif
